<resources>
    <string name="app_name">iReading</string>
    <string name="book_list">Book List</string>
    <string name="favorites">Favorites</string>
    <string name="garden">Garden</string>
    <string name="me">Me</string>
    <string name="pull_down_to_refresh">Pull Down to Refresh</string>
    <string name="release_to_refresh">Release to Refresh</string>
    <string name="refreshing">Refreshing</string>
    <string name="refresh_complete">Refresh complete</string>
    <string name="never_refresh">Never Refresh</string>
    <string name="just_refresh">Just Refresh</string>
    <string name="refreshed_minutes_ago">Refreshed %1s Minutes Ago</string>
    <string name="refreshed_hours_before">Refreshed %1s Hours Before</string>
    <string name="refreshed_days_before">Refreshed %1s Days Before</string>
    <string name="loading">Loading</string>
    <string name="loading_success">Loading Success</string>
    <string name="loading_failed">Loading Failed</string>
    <string name="loading_complete">Loading Complete</string>
    <string name="release_to_load_more">Release to Load More</string>
    <string name="every_item_has_been_loaded">Every Item Has Been Loaded</string>
    <string name="total_words">Total Words</string>
    <string name="new_words">New Words</string>
    <string name="evaluation">Evaluation</string>
    <string name="image_of_book_cover">Image of Book Cover</string>
    <string name="image_of_evaluation">Image of Evaluation</string>
    <string name="image_of_pull_arrow">Image of Pull Arrow</string>
    <string name="image_of_clear_text">Image of Clear Text</string>
    <string name="image_of_user">Image of User</string>
    <string name="image_of_info">Image of Info</string>
    <string name="image_of_password_visibility">Image of Password Visibility</string>
    <string name="image_of_backward_arrow">Image of Backward Arrow</string>
    <string name="image_of_forward_arrow">Image of Forward Arrow</string>
    <string name="image_of_add_to_favorite">Image of Add To Favorite</string>
    <string name="log_in">Login</string>
    <string name="log_in_now">Login Now</string>
    <string name="register">Register</string>
    <string name="register_now">Register</string>
    <string name="log_in_by_password">Login by Password</string>
    <string name="log_in_by_phone">Login by Phone</string>
    <string name="login_indicates_that_you_have_agreed_to">Login Indicates That You Have Agreed To</string>
    <string name="user_agreement">iReading User Agreement</string>
    <string name="username_or_phone_or_email">User Name/Phone Number/Email Address</string>
    <string name="password">Password</string>
    <string name="retrieve_password">Retrieve Password</string>
    <string name="please_enter_your_phone_number">Please Enter Your Phone Number</string>
    <string name="get_security_code">Get Security Code</string>
    <string name="please_enter_your_security_code">Please Enter Your Security Code</string>
    <string name="auto_create_account">Unregistered Phone Number Will Be Auto Registered as A iReading Account</string>
    <string name="log_in_to_browse_favorites">Login to Browse Favorites</string>
    <string name="input_phone_number">Input Phone Number</string>
    <string name="input_security_code">Input Security Code</string>
    <string name="set_password">Set Password</string>
    <string name="i_have_read_and_accept">I Have Read and Accept</string>
    <string name="submit_security_code">Submit Security Code</string>
    <string name="please_enter_your_password">Please Enter Your Password</string>
    <string name="please_repeat_your_password">Please Repeat Your Password</string>
    <string name="add_to_favorite">add to favorite</string>
    <string name="rate_this_book">rate this book</string>
    <string name="current_page">Current Page:</string>
    <string name="page_count">Page Count:</string>
    <string name="download_tip">Download Tip</string>
    <string name="click_start_to_download">Ready to Download Book Resource.
        Please Click The Following Button to Start</string>
    <string name="start_to_download">Start</string>
    <string name="cancel_download">Cancel</string>
</resources>
