<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top|start"
        android:text="@string/download_tip"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/click_start_to_download"
        android:textColor="@color/standardLightText"
        android:textSize="16sp" />

    <com.dd.morphingbutton.impl.LinearProgressButton
        android:id="@+id/btnStartToDownload"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@color/standardBlue"
        android:text="@string/start_to_download"
        android:textAllCaps="false"
        android:textColor="@color/standardWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCancelDownload"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_back_selector_red"
        android:text="@string/cancel_download"
        android:textAllCaps="false"
        android:textColor="@color/standardWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>

