<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.implementist.ireading.activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_and_edit"
        android:background="@color/standardWhite"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/lytBackFromRegister"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_transparent_to_gray"
            android:clickable="true"
            android:gravity="center">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/image_of_backward_arrow"
                android:scaleType="fitXY"
                android:src="@drawable/ic_arrow_left" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="20sp" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rdgRegisterSteps"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_and_edit"
        android:background="@color/standardGray"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbStep1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/input_phone_number"
            android:textColor="@color/color_white_to_blue"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/image_of_forward_arrow"
            android:scaleType="fitXY"
            android:src="@drawable/ic_arrow_right" />

        <RadioButton
            android:id="@+id/rbStep2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/input_security_code"
            android:textColor="@color/color_white_to_blue"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/image_of_forward_arrow"
            android:scaleType="fitXY"
            android:src="@drawable/ic_arrow_right" />

        <RadioButton
            android:id="@+id/rbStep3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/set_password"
            android:textColor="@color/color_white_to_blue"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/register_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
