<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.implementist.ireading.fragment.RegisterStep1Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_and_edit"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="15dp"
        android:background="@color/standardWhite"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editRegisterPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/please_enter_your_phone_number"
            android:inputType="phone"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imgRegisterClearPhoneNumber"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:clickable="true"
            android:contentDescription="@string/image_of_clear_text"
            android:scaleType="fitXY"
            android:src="@drawable/ic_delete"
            android:visibility="invisible" />

    </LinearLayout>

    <Button
        android:id="@+id/btnRegisterGetSecurityCode"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_and_edit"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_color_selector"
        android:enabled="false"
        android:text="@string/get_security_code"
        android:textColor="@color/standardWhite"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chbUserAgreement"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/chb_bg_selector"
            android:button="@null"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="12dp"
            android:gravity="center_vertical"
            android:text="@string/i_have_read_and_accept"
            android:textColor="@color/standardLightText"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtRegisterUserAgreement"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:background="@drawable/bg_transparent_to_gray"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/user_agreement"
            android:textColor="@color/standardBlue"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
