<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.implementist.ireading.fragment.LoginByPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/standardWhite"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/atxtAccountNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/username_or_phone_or_email"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imgClearAccountNumber"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:contentDescription="@string/image_of_clear_text"
            android:scaleType="fitXY"
            android:src="@drawable/ic_delete"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="1dp"
        android:background="@color/standardWhite"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imgClearPassword"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:contentDescription="@string/image_of_clear_text"
            android:scaleType="fitXY"
            android:src="@drawable/ic_delete"
            android:visibility="invisible" />
    </LinearLayout>

    <com.dx.dxloadingbutton.lib.LoadingButton
        android:id="@+id/btnLoginByPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        app:lb_btnColor="@color/standardBlue"
        app:lb_btnRippleColor="@color/standardDarkBlue"
        app:lb_btnText="@string/log_in"
        app:lb_resetAfterFailed="true"
        app:lb_textColor="@color/standardWhite" />

    <TextView
        android:id="@+id/txtRetrievePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_transparent_to_gray"
        android:clickable="true"
        android:gravity="center_vertical|end"
        android:text="@string/retrieve_password"
        android:textColor="@color/standardBlue"
        android:textSize="14sp" />

</LinearLayout>
